Fix: serve boilder ctf writeup as page

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: MassiveLowTaperFade0
+title: Bhavesh | Security Write-Ups
 description: Pentesting & TryHackMe write-ups
 theme: minima
+
 markdown: kramdown
