--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 title: Bhavesh | Security Write-Ups
 description: Pentesting & TryHackMe write-ups
-theme: 
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-remote-theme
+minima:
+  skin: dark
 
 markdown: kramdown
